Fixed CSS not showing up, added the link to CSS file

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
- text{
-    color: red;
-    background-color: black;
-    font-size: 54px;
- }
+p {
+   color: red;
+   background-color: blue;
+   font-size: 24px;
+}
